11. Fix reading of QtCurve supplied default kdeglobals file.
12. Fix rounding of troughs of progressbars within treeview.
13. When using glow focus, dont draw glow focus and line focus on button of editable
    combo - jsut draw line.
14. Improve background gradient performance - only re-draw on size-request if size
    is different from last time.

1.6.4
-----
1. Fix Claws Mail listview headers.
2. When drawing text on an option menu, look deeper into parent heirarchy to
   determine if the label is on a GtkOptionMenu.
3. Fix menubar borders when menubars set to be coloured as per titlebar.
4. Allow faded groupbox frame even when not shading background.
5. Dont draw shaded/faded background groupboxes for Mozilla, Java, or OpenOffice.org
6. Improve inner 3d part of line edits, combos, spinboxes, etc.

1.6.3
-----
1. Apply background opacity to menubars and toolbars.
2. Always use text colours when drawing labels on a GtkOptionMenu.
3. If using background opacity, draw rings and background gradient under
   menubars and toolbars - this matches the KDE4 behaviour.
4. Disable the support for 'fix parent-less dialog' option - this causes too many
   issues with applications to be worth the fuss. If you really want this enabled,
   use the -DQTC_ENABLE_PARENTLESS_DIALOG_FIX_SUPPORT=true cmake option.

1.6.2
-----
1. Theme evolution's headers as headers, and not buttons.
2. Set fallback icon theme to gnome instead of hicolor. This helps with some
   missing icons in evolution.
3. If drawing a background image, ensure that this can also be drawn onto kwin
   border - if it has a bottom edge.
4. Attempt to fix light text on dark background for OpenOffice.org
5. Use same radius for all corners of progressbar.
6. Apply menu background settings to menus of non-editable combos. (Rounding is
   not applied due to clipping/shadow issues with Gtk2)
7. Allow borderless rounded popup menus.
8. Don't draw double focus on Gimp combos.