@@ -19,6 +19,7 @@
     combo - jsut draw line.
 14. Improve background gradient performance - only re-draw on size-request if size
     is different from last time.
+15. Dont overwrite user supplied CMAKE_INSTALL_PREFIX
 
 1.6.4
 -----
